--- a/acmeair/acmeair-flightservice-java/manifests-openshift/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/acmeair-flightservice-java/manifests-openshift/deploy-acmeair-flightservice-java.yaml
@@ -96,7 +96,7 @@ spec:
         - name: acmeair-flight-db-2
           emptyDir: {}
       containers:
-      - image: quay.io/mmondics/mongodb:latest
+      - mongo
         name: acmeair-flight-db
         ports:
         - containerPort: 27017
