--- a/acmeair/acmeair-bookingservice-java/manifests-openshift/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/acmeair-bookingservice-java/manifests-openshift/deploy-acmeair-bookingservice-java.yaml
@@ -100,7 +100,7 @@ spec:
         - name: acmeair-booking-db-2
           emptyDir: {}
       containers:
-      - mongo
+      - image: mongo
         name: acmeair-booking-db
         ports:
         - containerPort: 27017
