--- a/acmeair/acmeair-customerservice-java/manifests-openshift/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/acmeair-customerservice-java/manifests-openshift/deploy-acmeair-customerservice-java.yaml
@@ -98,7 +98,7 @@ spec:
         - name: acmeair-customer-db-2
           emptyDir: {}
       containers:
-      - mongo
+      - image: mongo
         name: acmeair-customer-db
         ports:
         - containerPort: 27017
