--- a/acmeair/acmeair-bookingservice-java/manifests-openshift/acmeair-bookingservice-route.yaml
+++ b/acmeair/acmeair-bookingservice-java/manifests-openshift/acmeair-bookingservice-route.yaml
@@ -3,6 +3,7 @@ kind: Route
 metadata:
   name: acmeair-booking-route
 spec:
+  host: acmeair.apps.sdmt.cpolab.ibm.com
   path: /booking
   to:
     kind: Service
