--- a/acmeair/acmeair-flightservice-java/manifests-openshift/acmeair-flightservice-route.yaml
+++ b/acmeair/acmeair-flightservice-java/manifests-openshift/acmeair-flightservice-route.yaml
@@ -3,6 +3,7 @@ kind: Route
 metadata:
   name: acmeair-flight-route
 spec:
+  host: acmeair.apps.sdmt.cpolab.ibm.com
   path: /flight
   to:
     kind: Service
