--- a/acmeair/acmeair-customerservice-java/manifests-openshift/acmeair-customerservice-route.yaml
+++ b/acmeair/acmeair-customerservice-java/manifests-openshift/acmeair-customerservice-route.yaml
@@ -3,6 +3,7 @@ kind: Route
 metadata:
   name: acmeair-customer-route
 spec:
+  host: acmeair.apps.sdmt.cpolab.ibm.com
   path: /customer
   to:
     kind: Service
