--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: acmeair-authservice-java
-        image: quay.io/mmondics/acmeair-authservice-java:manifest-v1
+        image: quay.io/mmondics/acmeair-authservice-java:s390x-micro6
         ports:
           - containerPort: 9080
           - containerPort: 9443
