--- a/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-mainservice-java.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: acmeair-mainservice-java
-        image: quay.io/mmondics/acmeair-mainservice-java:s390x-micro4
+        image: quay.io/mmondics/acmeair-mainservice-java:s390x-manifest-micro4
         ports:
         - containerPort: 9080
         - containerPort: 9443
