--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: acmeair-customerservice-java
-        image: quay.io/mmondics/acmeair-customerservice-java:s390x-manifest-micro4
+        image: quay.io/mmondics/acmeair-customerservice-java:manifest-micro4
         ports:
           - containerPort: 9080
           - containerPort: 9443
