add rhacm routes

--- a/acmeair/routes-atsocpd1/acmeair-authservice-route.yaml
+++ b/acmeair/routes-atsocpd1/acmeair-authservice-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: acmeair-auth-route
 spec:
-  host: acmeair.apps.atsocpd1.dmz
+  host: acmeair-rhacm.apps.atsocpd1.dmz
   path: /auth
   to:
     kind: Service
