--- a/acmeair/routes-atsocpd1/acmeair-mainservice-route.yaml
+++ b/acmeair/routes-atsocpd1/acmeair-mainservice-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: acmeair-main-route
 spec:
-  host: acmeair.apps.atsocpd1.dmz
+  host: acmeair-rhacm.apps.atsocpd1.dmz
   path: /acmeair
   to:
     kind: Service
