--- a/acmeair/routes-x3wk/acmeair-customerservice-route.yaml
+++ b/acmeair/routes-x3wk/acmeair-customerservice-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: acmeair-customer-route
 spec:
-  host: acmeair.apps.x3wk.dmz
+  host: acmeair-rhacm.apps.x3wk.dmz
   path: /customer
   to:
     kind: Service
