--- a/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
@@ -15,6 +15,8 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9080"
     spec:
+      nodeSelector:
+        app: bookingservice
       containers:
       - name: acmeair-bookingservice-java
         image: quay.io/mmondics/acmeair-bookingservice-java:manifest-micro4
@@ -94,6 +96,8 @@ spec:
       labels:
         name: acmeair-booking-db
     spec:
+      nodeSelector:
+        app: bookingdb
       volumes:
         - name: acmeair-booking-db-1
           emptyDir: {}
