--- a/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
@@ -143,6 +143,6 @@ spec:
         image: quay.io/mmondics/acmeair-mongo:manifest-v1
         volumeMounts:
         - name: acmeair-booking-db-1
-          mountpath: /data/configdb
+          mountPath: /data/configdb
         - name: acmeair-booking-db-2
-          mountpath: /data/db
+          mountPath: /data/db
