revert customer db to deployment

--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -76,54 +76,21 @@ spec:
     name: acmeair-customer-db
 status:
   loadBalancer: {}
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   creationTimestamp: null
-#   name: acmeair-customer-db
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       name: acmeair-customer-db
-#   strategy: {}
-#   template:
-#     metadata:
-#       creationTimestamp: null
-#       labels:
-#         name: acmeair-customer-db
-#     spec:
-#       volumes:
-#         - name: acmeair-customer-db-1
-#           emptyDir: {}
-#         - name: acmeair-customer-db-2
-#           emptyDir: {}
-#       containers:
-#       - image: quay.io/mmondics/acmeair-mongo:manifest-v1
-#         name: acmeair-customer-db
-#         ports:
-#         - containerPort: 27017
-#           protocol: TCP
-#         resources: {}
-#         volumeMounts:
-#           - name: acmeair-customer-db-1
-#             mountPath: /data/configdb
-#           - name: acmeair-customer-db-2
-#             mountPath: /data/db
-#       restartPolicy: Always
-# status: {}
 ---
 apiVersion: apps/v1
-kind: DaemonSet
+kind: Deployment
 metadata:
+  creationTimestamp: null
   name: acmeair-customer-db
 spec:
+  replicas: 1
   selector:
     matchLabels:
       name: acmeair-customer-db
+  strategy: {}
   template:
     metadata:
+      creationTimestamp: null
       labels:
         name: acmeair-customer-db
     spec:
@@ -133,13 +100,46 @@ spec:
         - name: acmeair-customer-db-2
           emptyDir: {}
       containers:
-      - name: acmeair-customer-db
+      - image: quay.io/mmondics/acmeair-mongo:manifest-v1
+        name: acmeair-customer-db
         ports:
         - containerPort: 27017
           protocol: TCP
-        image: quay.io/mmondics/acmeair-mongo:manifest-v1
+        resources: {}
         volumeMounts:
-        - name: acmeair-customer-db-1
-          mountPath: /data/configdb
-        - name: acmeair-customer-db-2
-          mountPath: /data/db
+          - name: acmeair-customer-db-1
+            mountPath: /data/configdb
+          - name: acmeair-customer-db-2
+            mountPath: /data/db
+      restartPolicy: Always
+status: {}
+# ---
+# apiVersion: apps/v1
+# kind: DaemonSet
+# metadata:
+#   name: acmeair-customer-db
+# spec:
+#   selector:
+#     matchLabels:
+#       name: acmeair-customer-db
+#   template:
+#     metadata:
+#       labels:
+#         name: acmeair-customer-db
+#     spec:
+#       volumes:
+#         - name: acmeair-customer-db-1
+#           emptyDir: {}
+#         - name: acmeair-customer-db-2
+#           emptyDir: {}
+#       containers:
+#       - name: acmeair-customer-db
+#         ports:
+#         - containerPort: 27017
+#           protocol: TCP
+#         image: quay.io/mmondics/acmeair-mongo:manifest-v1
+#         volumeMounts:
+#         - name: acmeair-customer-db-1
+#           mountPath: /data/configdb
+#         - name: acmeair-customer-db-2
+#           mountPath: /data/db
