--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -23,6 +23,11 @@ spec:
           - containerPort: 9080
           - containerPort: 9443
         imagePullPolicy: Always
+        resources:
+          limits:
+            cpu: '2'
+          requests:
+            cpu: '1'
         env:
         - name: USERNAME
           value: admin
