--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -57,3 +57,22 @@ spec:
     - port: 9080
   selector:
     name: acmeair-auth-deployment
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: authservice-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: acmeair-authservice
+  minReplicas: 1
+  maxReplicas: 20
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          averageUtilization: 10
+          type: Utilization
