--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -22,10 +22,11 @@ spec:
           - containerPort: 9080
           - containerPort: 9443
         imagePullPolicy: Always
-        limits:
-          cpu: '8'
-        requests:
-          cpu: '4'
+        resources:
+          limits: 
+            cpu: '8'
+          requests:
+            cpu: '4'
         env:
         - name: USERNAME
           value: admin
