--- a/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
@@ -81,72 +81,72 @@ spec:
     name: acmeair-booking-db
 status:
   loadBalancer: {}
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
- name: acmeair-booking-db
-spec:
- replicas: 1
- selector:
-   matchLabels:
-     name: acmeair-booking-db
- strategy: {}
- template:
-   metadata:
-     creationTimestamp: null
-     labels:
-       name: acmeair-booking-db
-   spec:
-     volumes:
-       - name: acmeair-booking-db-1
-         emptyDir: {}
-       - name: acmeair-booking-db-2
-         emptyDir: {}
-     containers:
-     - image: quay.io/mmondics/acmeair-mongo:manifest-v1
-       name: acmeair-booking-db
-       ports:
-       - containerPort: 27017
-         protocol: TCP
-       resources: {}
-       volumeMounts:
-         - name: acmeair-booking-db-1
-           mountPath: /data/configdb
-         - name: acmeair-booking-db-2
-           mountPath: /data/db
-     restartPolicy: Always
-status: {}
 # ---
 # apiVersion: apps/v1
-# kind: DaemonSet
+# kind: Deployment
 # metadata:
-#   name: acmeair-booking-db
+#  name: acmeair-booking-db
 # spec:
-#   selector:
-#     matchLabels:
-#       name: acmeair-booking-db
-#   template:
-#     metadata:
-#       labels:
-#         name: acmeair-booking-db
-#     spec:
-#       volumes:
-#         - name: acmeair-booking-db-1
-#           emptyDir: {}
-#         - name: acmeair-booking-db-2
-#           emptyDir: {}
-#       containers:
-#       - name: acmeair-booking-db
-#         ports:
-#         - containerPort: 27017
-#           protocol: TCP
-#         image: quay.io/mmondics/acmeair-mongo:manifest-v1
-#         volumeMounts:
-#         - name: acmeair-booking-db-1
-#           mountPath: /data/configdb
-#         - name: acmeair-booking-db-2
-#           mountPath: /data/db
+#  replicas: 1
+#  selector:
+#    matchLabels:
+#      name: acmeair-booking-db
+#  strategy: {}
+#  template:
+#    metadata:
+#      creationTimestamp: null
+#      labels:
+#        name: acmeair-booking-db
+#    spec:
+#      volumes:
+#        - name: acmeair-booking-db-1
+#          emptyDir: {}
+#        - name: acmeair-booking-db-2
+#          emptyDir: {}
+#      containers:
+#      - image: quay.io/mmondics/acmeair-mongo:manifest-v1
+#        name: acmeair-booking-db
+#        ports:
+#        - containerPort: 27017
+#          protocol: TCP
+#        resources: {}
+#        volumeMounts:
+#          - name: acmeair-booking-db-1
+#            mountPath: /data/configdb
+#          - name: acmeair-booking-db-2
+#            mountPath: /data/db
+#      restartPolicy: Always
+# status: {}
+---
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: acmeair-booking-db
+spec:
+  selector:
+    matchLabels:
+      name: acmeair-booking-db
+  template:
+    metadata:
+      labels:
+        name: acmeair-booking-db
+    spec:
+      volumes:
+        - name: acmeair-booking-db-1
+          emptyDir: {}
+        - name: acmeair-booking-db-2
+          emptyDir: {}
+      containers:
+      - name: acmeair-booking-db
+        ports:
+        - containerPort: 27017
+          protocol: TCP
+        image: quay.io/mmondics/acmeair-mongo:manifest-v1
+        volumeMounts:
+        - name: acmeair-booking-db-1
+          mountPath: /data/configdb
+        - name: acmeair-booking-db-2
+          mountPath: /data/db
 ---
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
