--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -58,7 +58,7 @@ spec:
   selector:
     name: acmeair-auth-deployment
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: authservice-hpa
@@ -82,10 +82,10 @@ spec:
       policies:
       - type: Percent
         value: 200
-        periodSeconds: 5
+        periodSeconds: 15
     scaleUp:
       stabilizationWindowSeconds: 0
       policies:
       - type: Percent
         value: 200
-        periodSeconds: 5
+        periodSeconds: 15
