--- a/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
@@ -148,7 +148,7 @@ status: {}
 #         - name: acmeair-booking-db-2
 #           mountPath: /data/db
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: bookingservice-hpa
@@ -172,7 +172,7 @@ spec:
       policies:
       - type: Percent
         value: 200
-        periodSeconds: 5
+        periodSeconds: 15
     scaleUp:
       stabilizationWindowSeconds: 0
       policies:
