--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -147,7 +147,7 @@ status: {}
 #         - name: acmeair-customer-db-2
 #           mountPath: /data/db
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: customerservice-hpa
@@ -171,7 +171,7 @@ spec:
       policies:
       - type: Percent
         value: 200
-        periodSeconds: 5
+        periodSeconds: 15
     scaleUp:
       stabilizationWindowSeconds: 0
       policies:
