--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -24,9 +24,9 @@ spec:
         imagePullPolicy: Always
         resources:
           limits: 
-            cpu: '6'
-          requests:
             cpu: '3'
+          requests:
+            cpu: '1500m'
         env:
         - name: USERNAME
           value: admin
