--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -25,9 +25,9 @@ spec:
         imagePullPolicy: Always
         resources:
           limits:
-            cpu: '3'
+            cpu: '1500Mi'
           requests:
-            cpu: '1'
+            cpu: '500Mi'
         env:
         - name: USERNAME
           value: admin
@@ -88,4 +88,4 @@ spec:
       policies:
       - type: Percent
         value: 200
-        periodSeconds: 15
+        periodSeconds: 5
