--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -25,9 +25,9 @@ spec:
         imagePullPolicy: Always
         resources:
           limits:
-            cpu: '3'
+            cpu: '2'
           requests:
-            cpu: '1'
+            cpu: '800m'
         env:
         - name: USERNAME
           value: admin
