--- a/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-customerservice-java.yaml
@@ -24,9 +24,9 @@ spec:
         imagePullPolicy: Always
         resources:
           limits:
-            cpu: '4'
+            cpu: '3'
           requests:
-            cpu: '2'
+            cpu: '1500m'
         env:
         - name: USERNAME
           value: admin
