testing w/ jaeger disabled

--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: acmeair-flightservice-java
-        image: quay.io/mmondics/acmeair-flightservice-java:manifest-3.3
+        image: quay.io/mmondics/acmeair-flightservice-java:amd64-3.3-test1
         ports:
           - containerPort: 9080
           - containerPort: 9443
