--- a/acmeair/deployments/deploy-acmeair-authservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-authservice-java.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: acmeair-authservice-java
-        image: quay.io/mmondics/acmeair-authservice-java:manifest-3.3
+        image: quay.io/mmondics/acmeair-authservice-java:amd64-3.3-test1
         ports:
           - containerPort: 9080
           - containerPort: 9443
