--- a/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-bookingservice-java.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: acmeair-bookingservice-java
-        image: quay.io/mmondics/acmeair-bookingservice-java:amd64-3.3-test1
+        image: quay.io/mmondics/acmeair-bookingservice-java:manifest-3.3
         ports:
           - containerPort: 9080
           - containerPort: 9443
