--- a/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
+++ b/acmeair/deployments/deploy-acmeair-flightservice-java.yaml
@@ -34,6 +34,18 @@ spec:
           value: password
         - name: MONGO_HOST
           value: acmeair-flight-db
+        - name: JAEGER_AGENT_HOST
+          value: jaeger-all-in-one-inmemory-agent
+        - name: JAEGER_AGENT_PORT
+          value: '6832'
+        - name: JAEGER_ENDPOINT
+          value: 'http://jaeger-all-in-one-inmemory-collector:14268/api/traces'
+        - name: ACCESS_LOGGING_ENABLED
+          value: 'false'
+        - name: TRACE_SPEC
+          value: '*=info'
+        - name: LOGGING_FORMAT
+          value: 'simple'
         readinessProbe:
           httpGet:
             path: /health
