--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,23 @@
 name: Build, Scan and Rollout Multiarchitecture Containers
 
 env: 
-  QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
+  QUAY_USERNAME: ${{ env.QUAY_USERNAME }}
   QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
-  REDHAT_USERNAME: ${{ secrets.REDHAT_USERNAME }}
+  REDHAT_USERNAME: ${{ env.REDHAT_USERNAME }}
   REDHAT_PASSWORD: ${{ secrets.REDHAT_PASSWORD }}
-  GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
-  GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
+  GIT_USERNAME: ${{ env.GIT_USERNAME }}
+  GIT_EMAIL: ${{ env.GIT_EMAIL }}
   Z_IMAGE_TAGS: s390x-${{ github.sha }}
   X_IMAGE_TAGS: amd64-${{ github.sha }}
   MANIFEST_IMAGE_TAG: manifest-${{ github.sha }}
-  ROX_CENTRAL_ADDRESS: ${{ secrets.ROX_ADDRESS }}
+  ROX_CENTRAL_ADDRESS: ${{ env.ROX_ADDRESS }}
   ROX_API_TOKEN: ${{ secrets.ROX_API_TOKEN }}
 
   IMAGE_REGISTRY: quay.io/mmondics
   APP_NAME: acmeair-mainservice-java
   MANIFEST_NAME: acmeair-mainservice-java-manifest
 
-  SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+  SMTP_USERNAME: ${{ env.SMTP_USERNAME }}
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
   
 on:
