--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,7 +129,7 @@ jobs:
 
     - name: maven clean
       run: |
-        mvn clean package -f acmeair/source/acmeair-microservice-java/pom.xml
+        mvn clean package -f ./acmeair/source/acmeair-microservice-java/pom.xml
 
     - name: podman build
       run: |
