--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,9 +67,9 @@ jobs:
       id: checkout
       uses: actions/checkout@v2
 
-    - name: maven clean
+    - name: mvn clean package
       run: |
-        JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.x86_64/jre/
+        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.x86_64/jre/
         mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
   
     - name: podman build
@@ -128,9 +128,9 @@ jobs:
       id: checkout
       uses: actions/checkout@v2
 
-    - name: maven clean
+    - name: mvn clean package
       run: |
-        JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.x86_64/jre/
+        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.x86_64/jre/
         mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
 
     - name: podman build
