--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,8 @@ jobs:
 
     - name: Checkout
       id: checkout
-      uses: actions/checkout@v2
+      # uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: mvn clean package
       run: |
@@ -126,7 +127,8 @@ jobs:
 
     - name: Checkout
       id: checkout
-      uses: actions/checkout@v2
+      #uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: mvn clean package
       run: |
@@ -227,7 +229,7 @@ jobs:
         ./roxctl --insecure-skip-tls-verify image check --endpoint ${{ env.ROX_CENTRAL_ADDRESS }} --image ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }} 2>&1 | tee image_check.txt
     - name: Send email 
       # uses: dawidd6/action-send-mail@fa73d6accd067d4151b71f124ed939da15097abf
-      uses: dawidd6/action-send-mail@v3.7.2
+      uses: dawidd6/action-send-mail@v3
       with:
         # Connection URL protocol://user:password@server:port, protocol can be smtp or smtp+starttls, replaces server_address, server_port, secure, username and password
         #connection_url: # optional
@@ -247,6 +249,7 @@ jobs:
         to: matt.mondics@ibm.com
         # Full name of mail sender (might be with an email address specified in <>)
         from: Matt Mondics <matt.mondics@ibm.com>
+        attachments: deployment_check.txt,image_scan.txt,image_check.txt
         # Body of mail message (might be a filename prefixed with file:// to read from)
         body: |
           Red Hat Advanced Cluster Security scans for image:
