--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
   X_IMAGE_TAGS: amd64-${{ github.sha }}
   MANIFEST_IMAGE_TAG: manifest-${{ github.sha }}
   ROX_CENTRAL_ADDRESS: https://central-stackrox.apps.atsocpd2.dmz:443
-  ROX_API_TOKEN: ${{ secrets.ROX_API_TOKEN }}
+  #ROX_API_TOKEN: ${{ secrets.ROX_API_TOKEN }}
 
   IMAGE_REGISTRY: quay.io/mmondics
   APP_NAME: acmeair-mainservice-java
