--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,9 @@ env:
   MANIFEST_IMAGE_TAG: manifest-${{ github.sha }}
   ROX_CENTRAL_ADDRESS: https://central-stackrox.apps.atsocpd2.dmz:443
   #ROX_API_TOKEN: ${{ secrets.ROX_API_TOKEN }}
-
   IMAGE_REGISTRY: quay.io/mmondics
   APP_NAME: acmeair-mainservice-java
   MANIFEST_NAME: acmeair-mainservice-java-manifest
-
   SMTP_USERNAME: ibmwashingtonsystemscenter@gmail.com
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
   
@@ -38,17 +36,20 @@ jobs:
       # checkout@v2 should be used until s390x runner version is updated
       uses: actions/checkout@v2
 
+    # build the app package for s390x
     - name: mvn clean package
       run: |
-        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.s390x/jre
+        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk*/jre
         mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
   
+    # build the container image for s390x
     - name: podman build
       run: |
         podman version
         podman login registry.redhat.io -u ${{ env.REDHAT_USERNAME }} -p ${{ secrets.REDHAT_PASSWORD }}
         podman build -t ${{ env.IMAGE_REGISTRY }}/${{ env.APP_NAME }}:${{ env.Z_IMAGE_TAGS }} ./acmeair/source/acmeair-mainservice-java
 
+    # push the s390x container image to repo
     - name: Push to Registry 
       id: push-to-registry
       uses: redhat-actions/push-to-registry@v2
@@ -70,17 +71,20 @@ jobs:
       # checkout@v2 should be used until s390x runner is updated
       uses: actions/checkout@v2
 
+    # build the app package for amd64
     - name: mvn clean package
       run: |
-        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.382.b05-2.fc37.x86_64/jre/
+        export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk*/jre
         mvn clean package -f ./acmeair/source/acmeair-mainservice-java/pom.xml
 
+    # build the container image for amd64
     - name: podman build
       run: |
         podman version
         podman login registry.redhat.io -u ${{ env.REDHAT_USERNAME }} -p ${{ secrets.REDHAT_PASSWORD }}
         podman build -t ${{ env.IMAGE_REGISTRY }}/${{ env.APP_NAME }}:${{ env.X_IMAGE_TAGS }} ./acmeair/source/acmeair-mainservice-java
 
+    # push the amd64 container image to repo
     - name: Push to Registry 
       id: push-to-registry
       uses: redhat-actions/push-to-registry@v2
@@ -99,6 +103,7 @@ jobs:
       - amd64-build-and-push
     environment: openshift
     
+    # Create image manifest, add the s390x and amd64 container images, then push the manifest to the repository.
     steps:
       - name: podman login
         run: podman login ${{ env.IMAGE_REGISTRY }} -u ${{ env.QUAY_USERNAME }} -p ${{ env.QUAY_PASSWORD }}
@@ -116,7 +121,7 @@ jobs:
         run: podman manifest push ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }} ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }}
   
   update-app-yaml:
-    name: update acmeair mainservice application YAML to use new manifest image
+    name: update acmeair mainservice application YAML to use new image manifest
     runs-on: ubuntu-latest
     needs: create-manifest
     environment: openshift
@@ -126,7 +131,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: DevSecOps
-      - name: one liner to replace container image in YAML
+      # update image name in deployment YAML
+      # probably should replace this with https://github.com/marketplace/actions/find-and-replace
+      - name: replace container image in YAML
         run: |
           sed -i '21s@.*@        image: ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }}@' ./acmeair/deployments/deploy-acmeair-mainservice-java.yaml
       - name: git config
@@ -138,7 +145,7 @@ jobs:
       - name: stage changed files
         run: git add .
       - name: commit changed files
-        run: git commit -m "auto update deploy-acmeair-mainservice-java.yaml"
+        run: git commit -m "update deploy-acmeair-mainservice-java.yaml via GitHub Actions"
       - name: fetch from DevSecOps
         run: git fetch origin DevSecOps
       - name: push code to DevSecOps branch
@@ -151,6 +158,8 @@ jobs:
     needs: update-app-yaml
     continue-on-error: true
     
+    # Image scan is initated on self-hosted IBM Z runner.
+    # Image scan is performed by ACS server running on IBM Z.
     steps:
     - name: install roxctl cli        
       run: | 
@@ -167,27 +176,19 @@ jobs:
     - name: image-check
       run: |
         ./roxctl --insecure-skip-tls-verify image check --endpoint ${{ env.ROX_CENTRAL_ADDRESS }} --image ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }} 2>&1 | tee image_check.txt
+    
+    # Send results of security scans through email.
     - name: Send email 
-      # uses: dawidd6/action-send-mail@fa73d6accd067d4151b71f124ed939da15097abf
       uses: dawidd6/action-send-mail@v3
       with:
-        # Connection URL protocol://user:password@server:port, protocol can be smtp or smtp+starttls, replaces server_address, server_port, secure, username and password
-        #connection_url: # optional
-        # SMTP server address
         server_address: smtp.gmail.com
-        # SMTP server port
         server_port: 465
-        # Whether this connection use TLS (default is true if server_port is 465)
         secure: true
-        # Authenticate as this user to SMTP server
         username: ${{ env.SMTP_USERNAME }}
-        # Authenticate with this password to SMTP server
         password: ${{ env.SMTP_PASSWORD }}
         # Subject of mail message
         subject: Security Scan for image ${{ env.IMAGE_REGISTRY }}/${{ env.MANIFEST_NAME }}:${{ env.MANIFEST_IMAGE_TAG }}
-        # Recipients mail addresses (separated with comma)
         to: matt.mondics@ibm.com
-        # Full name of mail sender (might be with an email address specified in <>)
         from: Matt Mondics <matt.mondics@ibm.com>
         attachments: deployment_check.txt,image_scan.txt,image_check.txt
         # Body of mail message (might be a filename prefixed with file:// to read from)
